--- a/Jumia Webscraping.ipynb
+++ b/Jumia Webscraping.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "d77d877e",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "b43cee6f",
    "metadata": {},
    "outputs": [
@@ -40,6 +40,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Getting page, 1\n",
+      "Getting page, 2\n",
+      "Getting page, 3\n",
+      "Getting page, 4\n",
+      "Getting page, 5\n",
+      "Getting page, 6\n",
+      "Getting page, 7\n",
+      "Getting page, 8\n",
+      "Getting page, 9\n",
+      "Getting page, 10\n",
+      "Getting page, 11\n",
+      "Getting page, 12\n",
+      "Getting page, 13\n",
+      "Getting page, 14\n",
+      "Getting page, 15\n",
+      "Getting page, 16\n",
+      "Getting page, 17\n",
+      "Getting page, 18\n",
+      "Getting page, 19\n",
+      "Getting page, 20\n",
+      "Getting page, 21\n",
+      "Getting page, 22\n",
+      "Getting page, 23\n",
+      "Getting page, 24\n",
+      "Getting page, 25\n",
+      "Getting page, 26\n",
+      "Getting page, 27\n",
+      "Getting page, 28\n",
+      "Getting page, 29\n",
+      "Getting page, 30\n",
+      "Getting page, 31\n",
+      "Getting page, 32\n",
+      "Getting page, 33\n",
+      "Getting page, 34\n",
+      "Getting page, 35\n",
+      "Getting page, 36\n",
+      "Getting page, 37\n",
+      "Getting page, 38\n",
+      "Getting page, 39\n",
+      "Getting page, 40\n",
+      "Getting page, 41\n",
+      "Getting page, 42\n",
+      "Getting page, 43\n",
+      "Getting page, 44\n",
+      "Getting page, 45\n",
+      "Getting page, 46\n",
+      "Getting page, 47\n",
+      "Getting page, 48\n",
+      "Getting page, 49\n",
+      "Getting page, 50\n",
       "Getting page, 51\n",
       "Getting page, 52\n",
       "Getting page, 53\n",
@@ -90,9 +140,68 @@
       "Getting page, 98\n",
       "Getting page, 99\n",
       "Getting page, 100\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
+      "Getting page, 101\n",
+      "Getting page, 102\n",
+      "Getting page, 103\n",
+      "Getting page, 104\n",
+      "Getting page, 105\n",
+      "Getting page, 106\n",
+      "Getting page, 107\n",
+      "Getting page, 108\n",
+      "Getting page, 109\n",
+      "Getting page, 110\n",
+      "Getting page, 111\n",
+      "Getting page, 112\n",
+      "Getting page, 113\n",
+      "Getting page, 114\n",
+      "Getting page, 115\n",
+      "Getting page, 116\n",
+      "Getting page, 117\n",
+      "Getting page, 118\n",
+      "Getting page, 119\n",
+      "Getting page, 120\n",
+      "Getting page, 121\n",
+      "Getting page, 122\n",
+      "Getting page, 123\n",
+      "Getting page, 124\n",
+      "Getting page, 125\n",
+      "Getting page, 126\n",
+      "Getting page, 127\n",
+      "Getting page, 128\n",
+      "Getting page, 129\n",
+      "Getting page, 130\n",
+      "Getting page, 131\n",
+      "Getting page, 132\n",
+      "Getting page, 133\n",
+      "Getting page, 134\n",
+      "Getting page, 135\n",
+      "Getting page, 136\n",
+      "Getting page, 137\n",
+      "Getting page, 138\n",
+      "Getting page, 139\n",
+      "Getting page, 140\n",
+      "Getting page, 141\n",
+      "Getting page, 142\n",
+      "Getting page, 143\n",
+      "Getting page, 144\n",
+      "Getting page, 145\n",
+      "Getting page, 146\n",
+      "Getting page, 147\n",
+      "Getting page, 148\n",
+      "Getting page, 149\n",
+      "     Brand                                               Name      Price  \\\n",
+      "0  Samsung  Samsung Galaxy A13, 6.6\", 4GB/64GB, 5000MAh, A...  ₦ 129,900   \n",
+      "1  Samsung  Samsung Galaxy A03 Core, 2GB/32GB Memory - Ony...   ₦ 64,000   \n",
+      "2  Infinix  Infinix Hot 12 Play, 4GB/128GB Memory, Android...   ₦ 99,000   \n",
+      "3  Samsung  Samsung S22, 6.1\" Dynamic AMOLED Screen, 8GB/1...  ₦ 515,900   \n",
+      "4  Samsung        Samsung Galaxy A03, 4GB/64GB Memory - Black   ₦ 97,000   \n",
+      "\n",
+      "   Old_Price                                            Website          Star  \n",
+      "0  ₦ 143,000  https://www.jumia.com.ng/samsung-galaxy-a13-6....  4.8 out of 5  \n",
+      "1   ₦ 94,740  https://www.jumia.com.ng/samsung-galaxy-a03-co...  4.3 out of 5  \n",
+      "2  ₦ 146,300  https://www.jumia.com.ng/infinix-hot-12-play-4...  4.7 out of 5  \n",
+      "3             https://www.jumia.com.ng/samsung-s22-6.1-dynam...                \n",
+      "4  ₦ 120,000  https://www.jumia.com.ng/samsung-galaxy-a03-4g...  4.3 out of 5  \n"
      ]
     }
    ],
@@ -160,7 +269,7 @@
     "# Creating a pandas dataFrame and storing to a csv file named phonelist.csv    \n",
     "df = pd.DataFrame(phonelist)\n",
     "print(df.head())\n",
-    "df.to_csv('phonelist3.csv')\n",
+    "df.to_csv('phone.csv')\n",
     "\n",
     "\n"
    ]
