--- a/Jumia Webscraping.ipynb
+++ b/Jumia Webscraping.ipynb
@@ -211,7 +211,7 @@
     "\n",
     "#     Supplying the headers and url to be read by requests\n",
     "    headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36'}\n",
-    "    url = f'https://www.jumia.com.ng/apple--gionee--google--huawei--infinix--itel--oppo--samsung--sony--tecno--xiaomi/?q=phone&price=50000-1000000&page={page}#catalog-listing'\n",
+    "    url = f'https://www.jumia.com.ng/apple--gionee--google--huawei--infinix--itel--iphone--oppo--samsung--sony--tecno--xiaomi/?q=phone&price=50000-1000000&page={page}#catalog-listing'\n",
     "#     Getting a response from the Url\n",
     "    r = requests.get(url, headers)\n",
     "    \n",
@@ -266,21 +266,13 @@
     "    c = extract(i)\n",
     "    transform(c)\n",
     "    \n",
-    "# Creating a pandas dataFrame and storing to a csv file named phonelist.csv    \n",
+    "# Creating a pandas dataFrame and storing to a csv file named phoneprice.csv    \n",
     "df = pd.DataFrame(phonelist)\n",
     "print(df.head())\n",
-    "df.to_csv('phone.csv')\n",
+    "df.to_csv('phoneprice.csv')\n",
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1ff6b5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
